# NKUST

./: .gitignore  .gitmodules  README.md
1st-2/image_recognition/: 01_capture_img.py  02_move_file.py  03_train.py  04_predict.py  test.py
1st-2/image_recognition/20240401/: 01.py  02.py  03.py  05.py  requirements.txt  test.py
1st-2/image_recognition/final/: brand.csv  cars_test_annos.mat.csv  cars_test_annos_withlabels.mat.csv  cars_train_annos.mat.csv  generate_csv.py  note.md  requirements.txt  test.py  train2.py
1st-2/image_recognition/midterm_report/: README.md
1st-2/image_recognition/week10/: .gitignore  01_LoadData.py  02_Train.py
1st-2/image_recognition/week11/: .gitignore  0_test.py  1_讀取影像.py  2_YOLO測試.py  3_YOLO_cam.py  car_track.py  note.md
1st-2/linux/week11/: note.md
1st-2/php/midterm_exam/: README.md
1st-2/php/midterm_exam_old/: README.md
1st-2/python/midterm_exam/: C112156233.docx  Module.py  README.md  idiot_code_generator.py  q1.py  q2.py  table_generator.py
2nd-1/Data_Structure/ch14/: homework.md
2nd-1/Data_Structure/ch4/: 4-23_1.c  4-30.c  8.c  homework.md
2nd-1/Data_Structure/final_program/: README.md  article.txt  main.c
2nd-1/Introduction_to_Computers/: hw2.md  hw3.md
2nd-1/logic_design/: homework_1.docx
2st-1/java/: homework_1_1.7z  homework_1_1.java  homework_1_2.7z
3rd-1/cpp/final/: demo  (+7 more)
3rd-1/data_mining/homework/week5/gaze_detection/: .gitignore  README.md  chatGPT.md  extract_features.py  mirror_videos.sh  pyproject.toml  realtime_prediction.py  report.md  requirements.txt  train_svm.py
3rd-1/net/: hw1.pkt
(+312 files in other folders)
