[project]
name = "gaze-detection"
version = "0.1.0"
description = "Gaze detection using MediaPipe and SVM"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
]
